# baihe-autogui-inspect

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: smoke_import.py
src/baihe_autogui_inspect/: __init__.py  __main__.py  main.py
src/baihe_autogui_inspect/core/: child_loader.py  hover_tracker.py  inspector.py  pick_loader.py  playground.py  thread_base.py  worker.py
src/baihe_autogui_inspect/ui/: flash_highlighter.py  main_window.py  node_details.py  overlay.py  pick_mode.py  playground_panel.py  qt_helpers.py  selection_highlighter.py  timing_presenter.py  tree_controller.py
src/baihe_autogui_inspect/ui/models/: table_model.py  tree_model.py
src/baihe_autogui_inspect/utils/: logging.py
tests/: conftest.py  helpers.py  test_entrypoints.py  test_flash_highlighter.py  test_hover_tracker.py  test_inspector.py  test_logging.py  test_main_window.py  test_models.py  test_overlay.py  test_pick_loader.py  test_pick_mode.py  test_playground.py  test_presenters.py  test_selection_highlighter.py  test_tree_controller.py
